[gd_scene load_steps=19 format=3 uid="uid://dtihbxcf0qlgu"]

[ext_resource type="Script" path="res://Scenes/inbed.gd" id="1_okyrx"]
[ext_resource type="PackedScene" uid="uid://c7k7ltkugm7vp" path="res://Assets/Blender/tv.glb" id="4_odu6h"]
[ext_resource type="AudioStream" uid="uid://bax4gaooyw87h" path="res://Assets/audio/FNAF1 sound/error.wav" id="6_53tvl"]
[ext_resource type="PackedScene" uid="uid://bkm7m4bfvhfai" path="res://Assets/Blender/frontdoor.glb" id="6_d5lh8"]
[ext_resource type="AudioStream" uid="uid://bd48qao7w8ief" path="res://Assets/audio/FNAF1 sound/XSCREAM.wav" id="7_kgjb1"]
[ext_resource type="PackedScene" uid="uid://dgc6t72orkckn" path="res://Assets/Blender/person.glb" id="8_24qfn"]
[ext_resource type="AudioStream" uid="uid://he10d12je6hn" path="res://Assets/audio/FNAF1 sound/knock2.wav" id="8_75tux"]
[ext_resource type="AudioStream" uid="uid://b3it84ahg1kqd" path="res://Assets/audio/FNAF1 sound/deep steps.wav" id="9_aobq1"]
[ext_resource type="Texture2D" uid="uid://b6ynss6oe4n8s" path="res://Assets/textures/output.jpeg" id="10_11gu2"]
[ext_resource type="AudioStream" uid="uid://c1c3cdwony4ui" path="res://Assets/audio/FNAF1 sound/ambience2.wav" id="13_057ay"]
[ext_resource type="PackedScene" uid="uid://b4u7voceqohpl" path="res://Assets/Blender/betterhouse.glb" id="14_ndxrf"]
[ext_resource type="AudioStream" uid="uid://bnsqdl47f85x8" path="res://Assets/audio/FNAF1 sound/powerdown.wav" id="16_rikts"]
[ext_resource type="PackedScene" uid="uid://npby381d4ue4" path="res://Scenes/bed.tscn" id="22_bb5o5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dahxg"]

[sub_resource type="Sky" id="Sky_fy2j0"]
sky_material = SubResource("ProceduralSkyMaterial_dahxg")

[sub_resource type="Environment" id="Environment_amhus"]
background_mode = 2
background_energy_multiplier = 0.33
sky = SubResource("Sky_fy2j0")
volumetric_fog_enabled = true

[sub_resource type="FogMaterial" id="FogMaterial_1fnpm"]
emission = Color(0.237539, 0.237539, 0.237539, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_nekwj"]
specular_color = Color(0, 0, 0, 1)

[node name="inbed" type="Node3D"]
script = ExtResource("1_okyrx")

[node name="Enviroment" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50.4236, 0)
light_color = Color(0.0404559, 0.156495, 0.266639, 1)
light_energy = 0.25

[node name="WorldEnvironment" type="WorldEnvironment" parent="Enviroment"]
environment = SubResource("Environment_amhus")

[node name="FogVolume" type="FogVolume" parent="Enviroment/WorldEnvironment"]
transform = Transform3D(2.05745, 0, 0, 0, 1, 0, 0, 0, 1.73366, 2.65454, -0.946048, 0)
size = Vector3(67.4414, 2, 65.2969)
material = SubResource("FogMaterial_1fnpm")

[node name="CSGBox3D" type="CSGBox3D" parent="Enviroment"]
transform = Transform3D(0.799533, 0, 0, 0, 1, 0, 0, 0, 0.787618, 0, -0.503399, 0)
use_collision = true
size = Vector3(100, 0.25, 100)

[node name="SpotLight3D" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -0.00612605, 0.999981, 0, -0.999981, -0.00612605, -2.56975, 3.49516, 0)
light_color = Color(0.864803, 0.871976, 0.480517, 1)
light_energy = 0.515
light_volumetric_fog_energy = 16.0
shadow_enabled = true
spot_range = 91.945
spot_attenuation = -1.22
spot_angle = 72.28
spot_angle_attenuation = 0.554784

[node name="SpotLight3D4" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -0.00612605, 0.999981, 0, -0.999981, -0.00612605, 3.4259, 3.49516, -4.23497)
light_color = Color(0.864803, 0.871976, 0.480517, 1)
light_energy = 0.515
light_volumetric_fog_energy = 16.0
shadow_enabled = true
spot_range = 91.945
spot_attenuation = -1.22
spot_angle = 72.28
spot_angle_attenuation = 0.554784

[node name="SpotLight3D5" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -0.00612605, 0.999981, 0, -0.999981, -0.00612605, 3.4259, 3.49516, 0.552924)
light_color = Color(0.864803, 0.871976, 0.480517, 1)
light_energy = 0.515
light_volumetric_fog_energy = 16.0
shadow_enabled = true
spot_range = 91.945
spot_attenuation = -1.22
spot_angle = 72.28
spot_angle_attenuation = 0.554784

[node name="SpotLight3D2" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -0.00612605, 0.999981, 0, -0.999981, -0.00612605, -17.0024, 3.63548, -19.5314)
light_color = Color(0.864803, 0.871976, 0.480517, 1)
light_energy = 4.194
light_volumetric_fog_energy = 0.0
shadow_enabled = true
spot_angle = 38.02

[node name="SpotLight3D6" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -0.00612605, 0.999981, 0, -0.999981, -0.00612605, -17.0024, 3.63548, -23.1065)
light_color = Color(0.864803, 0.871976, 0.480517, 1)
light_energy = 4.194
light_volumetric_fog_energy = 0.0
shadow_enabled = true
spot_angle = 38.02

[node name="SpotLight3D3" type="SpotLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 38.7669, 0)
light_energy = 0.0
light_volumetric_fog_energy = 16.0
spot_range = 55.29

[node name="House" parent="." instance=ExtResource("14_ndxrf")]

[node name="bed" parent="." instance=ExtResource("22_bb5o5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56248, 0, -4.88)

[node name="Camera3D" type="Camera3D" parent="bed"]
transform = Transform3D(-0.423978, 0, 0.905672, 0, 1, 0, -0.905672, 0, -0.423978, 1.15158, 1.8, -0.252922)

[node name="tv" parent="." instance=ExtResource("4_odu6h")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.88347, 0.795077, -0.31453)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("16_rikts")

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("6_53tvl")

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("7_kgjb1")
volume_db = -14.692

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("8_75tux")

[node name="AudioStreamPlayer3D5" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("9_aobq1")

[node name="AudioStreamPlayer3D6" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29077, 0.868501, -3.10723)
stream = ExtResource("9_aobq1")

[node name="frontdoor2" parent="." instance=ExtResource("6_d5lh8")]
transform = Transform3D(0.480438, 0, 0.877029, 0, 1, 0, -0.877029, 0, 0.480438, 0.119697, -2.38419e-07, -3.24986)

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -29.0
offset_right = 94.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Did you close the doors?"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Yes"

[node name="Button2" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = "No"

[node name="LoadingScreen" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(966.25, 544.75)
scale = Vector2(1933.5, 1090.5)
texture = SubResource("CanvasTexture_nekwj")

[node name="person" parent="." instance=ExtResource("8_24qfn")]
transform = Transform3D(-0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, -0.404638, 0, -2.51462)
visible = false

[node name="Jumpscare" type="TextureRect" parent="."]
visible = false
offset_right = 1910.0
offset_bottom = 1086.0
texture = ExtResource("10_11gu2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_057ay")
volume_db = -10.0
autoplay = true
